# s3-clone

./: Cargo.toml  README.md  config.yaml  hello.txt  test.sh
docs/: acl_cors.md  bucket_create.md  bucket_delete.md  bucket_list.md  bucket_list_objects.md  bucket_list_objects_v2.md  healthcheck.md  multipart_abort.md  multipart_complete.md  multipart_initiate.md  multipart_list_parts.md  multipart_list_uploads.md  multipart_upload_part.md  object_delete.md  object_get.md  object_get_range.md  object_put.md  presigned_get.md  presigned_put.md
docs/examples/acl_cors/: 403_AccessDenied.xml
docs/examples/bucket_create/: 400_InvalidBucketName.xml  409_BucketAlreadyExists.xml  409_BucketAlreadyOwnedByYou.xml
docs/examples/bucket_delete/: 409_BucketNotEmpty.xml
docs/examples/multipart_complete/: 400_InvalidPartOrder.xml
docs/examples/multipart_list_parts/: 404_NoSuchUpload.xml
docs/examples/multipart_upload_part/: 400_InvalidPart.xml
docs/examples/object_get/: 404_NoSuchKey.xml
docs/examples/object_get_range/: 416_InvalidRange.xml
docs/examples/object_put/: 400_InvalidObjectName.xml  403_AccessDenied.xml  404_NoSuchBucket.xml
docs/examples/presigned_get/: 403_AccessDenied.xml
old/: Cargo.toml  config.yaml
old/src/config/: mod.rs
old/src/handlers/: bucket.rs  mod.rs
old/src/middleware/: mod.rs
src/: error.rs  main.rs  middleware.rs  models.rs  server.rs
src/auth/: mod.rs
src/config/: mod.rs
src/handlers/: bucket.rs  mod.rs  object.rs
src/middleware/: request_id.rs
src/models/: domain.rs  requests.rs  responses.rs
src/services/: auth.rs  bucket.rs  mod.rs  multipart.rs  object.rs
src/storage/: mod.rs
