[package]
name = "s3-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
notify = {version = "5.0.0", "features" = ["macos_fsevent", "serde", "macos_kqueue"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.1"
uuid = "1.16.0"
